# stringcalulator

./: README.md  Vagrantfile
cpp/: README.md  build.sh  createEclipseProject.sh
cpp/project/: CMakeLists.txt
cpp/project/contrib/cmake/: CodeCoverage.cmake
cpp/project/src/: StringCalculator.cpp  StringCalculator.h  StringUtils.h
cpp/project/test/: StringCalculatorTest.cpp
docker/: README.md  Vagrantfile  bash-linux  buildDeploymentImages.sh  ciBuild.sh  configrc  configrc.example  deploy.sh  ensure_bash_is_there.sh  jenkins_deploy.sh
docker/buildEnvironments/clang3.6/: Dockerfile  build.sh
docker/buildEnvironments/gcc4.8/: Dockerfile  build.sh
docker/buildEnvironments/gcc5.2/: Dockerfile  build.sh
docker/compose/: README.md
java/: LICENSE  README.md
src/com/arhs/spikeseed/tdd/stringcalculator/: StringCalculator.java
test/com/arhs/spikeseed/tdd/stringcalculator/: StringCalculatorTest.java
